bug#31754 ndb_mgm -e 'start backup wait started' does not display output on stdout